<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:padding="20dp"
    tools:context=".Activities.Signups_activity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/otpBack"
            android:onClick="goToMainActivity2FromSignUp"
            android:padding="4dp"
            android:src="@drawable/gotohome"
            app:tint="@color/black" />

        <RelativeLayout
            android:id="@+id/r1_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp">

            <TextView
                android:id="@+id/textView1_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:text="@string/Vidmeet"
                android:textSize="35sp"
                app:fontFamily="@font/poppinsmedium" />
        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/r2_signup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/r1_signup"
            android:layout_marginTop="10dp"
            android:background="@color/white"
            android:padding="8dp">

            <LinearLayout
                android:id="@+id/sed"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                tools:ignore="UselessParent">

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/e1_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="30dp"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/but5"
                    app:counterMaxLength="30">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ee1_signup"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/but1"
                        android:fontFamily="@font/poppinsmedium"
                        android:hint="@string/enter_your_name"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/e2_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/but5">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ee2_signup"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/but1"
                        android:fontFamily="@font/poppinsmedium"
                        android:hint="@string/enter_your_email"
                        android:inputType="textEmailAddress"
                        android:padding="10dp"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/e3_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/but5">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ee3_signup"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/but1"
                        android:fontFamily="@font/poppinsmedium"
                        android:hint="@string/enter_your_username"
                        android:inputType="text"
                        android:padding="10dp"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    android:id="@+id/e4_signup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="4dp"
                    android:background="@drawable/but5"
                    app:counterMaxLength="30"
                    app:passwordToggleEnabled="true">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/ee4_signup"
                        android:layout_width="match_parent"
                        android:layout_height="48dp"
                        android:background="@drawable/but1"
                        android:fontFamily="@font/poppinsmedium"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword"
                        android:padding="10dp"
                        android:textSize="14sp" />
                </com.google.android.material.textfield.TextInputLayout>

                <Spinner
                    android:id="@+id/s1_signup"
                    android:layout_width="match_parent"
                    android:layout_height="48dp"
                    android:layout_marginTop="6dp"
                    android:background="@drawable/but1"
                    android:padding="10dp" />

                <Button
                    android:id="@+id/b1_signup"
                    android:layout_width="200dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_marginTop="30dp"
                    android:background="@drawable/but2"
                    android:onClick="SignUpOperation"
                    android:text="@string/signup"
                    android:textColor="#fff" />
            </LinearLayout>


        </RelativeLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/r2_signup"
            android:layout_alignParentBottom="true"
            android:layout_marginTop="30dp"
            android:foregroundGravity="center"
            android:gravity="center"
            android:padding="10dp">

            <TextView
                android:id="@+id/textView2_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center|end"
                android:text="@string/already_have_an_account"
                android:textSize="14sp"
                app:fontFamily="@font/poppinsmedium" />

            <TextView

                android:id="@+id/t1_signup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="4dp"
                android:layout_marginLeft="4dp"
                android:layout_weight="1"
                android:text="@string/login"
                android:textSize="14sp"
                android:textStyle="bold"
                app:fontFamily="@font/poppinsbold" />
        </LinearLayout>
    </RelativeLayout>
</ScrollView>